[package]
name = "file_upload_service_warp"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bytes = "1.0"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sanitize-filename = "0.4"
multer = "2.1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["multipart"] }
